--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>소스제어는을 통해 제어하고  1<%= title %> 지속적인 소스통합(CI))</p>
+    <p>소스가 자동반영 됩니까?</p>
   </body>
 </html>
